# financeager

./: .coveragerc  .flake8  .gitignore  .gitlint  .isort.cfg  .pre-commit-config.yaml  .style.yapf  .travis.yml  Changelog.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.py
.github/: dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
examples/: extract_from_bank_statement_client.py  fcgi.py  start_webservice.py  wsgi.py
financeager/: __init__.py  cli.py  clients.py  communication.py  config.py  convert.py  db_utils.py  entries.py  exceptions.py  fflask.py  httprequests.py  items.py  listing.py  localserver.py  main.py  model.py  offline.py  period.py  plugin.py  pocket.py  pyro.py  resources.py  rich.py  server.py  start_server.py  start_webservice.py  tui.py
financeager/gui/: balancemodel.py  items.py  settingsdialog.py
financeager/gui/ui/: buttongrouptest.ui
financeager/pocket/: __init__.py  base.py  migrate.py  sqlite.py  tinydb.py  utils.py
financeager/qt/gui/: undocontainer.py
financeager/qt/gui/ui/: monthtab.ui  newentrydialog.ui  searchdialog.ui
financeager/test/: __init__.py  test_items.py
src/: settings.py
src/gui/: __init__.py  balancemodel.py  buttongrouptest.py  categoriestab.py  filesavingtab.py  financeagerwindow.py  items.py  monthtab.py  newentrydialog.py  searchdialog.py  settingsdialog.py  statisticswindow.py  undocontainer.py
src/gui/ui/: categoriestab.ui  filesavingtab.ui  financeagerwindow.ui  newentrydialog.ui  searchdialog.ui  settingsdialog.ui  statisticswindow.ui
src/test/: test_items.py
test/: _test_cli.py  integration.bash  suites.py  test_cli.py  test_clients.py  test_communication.py  test_config.py  test_convert.py  test_entries.py  test_fflask.py  test_httprequests.py  test_items.py  test_listing.py  test_logging.py  test_model.py  test_offline.py  test_period.py  test_pocket.py  test_server.py  test_webservice.py  utils.py
