[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]

[project]
name = "financeager"
description = "command line tool for organizing finances"
readme = "README.md"
keywords = [
  "commandline",
  "finances",
]
license = {text = "GPLv3"}
authors = [{ name = "Philipp Metzner", email = "beth.aleph@yahoo.de" }]
dependencies = [
  "appdirs==1.4.4",
  "argcomplete==3.2.2",
  "marshmallow==3.20.2",
  "python-dateutil==2.8.2",
  "rich==13.7.0",
  "tinydb==4.8.0",
]
dynamic = [
  "version",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Database",
  "Topic :: Utilities",
]
[project.optional-dependencies]
develop = [
  "black==24.1.1",
  "coverage==7.4.1",
  'flake8==7.0.0',
  "flake8-pyproject==1.2.3",
  "gitlint-core==0.19.1",
  'isort==5.13.2',
  'pre-commit==3.5.0',
]
packaging = [
  "build",
]

[project.urls]
"Bug Tracker" = "https://github.com/pylipp/financeager/issues"
Documentation = "https://github.com/pylipp/financeager"
Homepage = "https://github.com/pylipp/financeager"
"Source Code" = "https://github.com/pylipp/financeager"

[project.scripts]
fina = "financeager.cli:main"


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["test"]
namespaces = false

[tool.coverage.run]
branch = true
source = ["financeager"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "except Exception:",
  "def .*main()",
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
known_third_party = ["appdirs","argcomplete","dateutil","marshmallow","pkg_resources","setuptools","tinydb"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E731",  # do not assign a lambda expression, use a def
  "W503",  # line break before binary operator
  "W504",  # line break after binary operator
]
